<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:label="@string/home"
        android:name="com.example.movieviews.presentation.ui.fragment.home.HomeFragment"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.example.movieviews.presentation.ui.fragment.movie.MovieFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movie"/>

    <fragment
        android:id="@+id/navigation_tv_show"
        android:name="com.example.movieviews.presentation.ui.fragment.tvshow.TvShowFragment"
        android:label="@string/tvShow"
        tools:layout="@layout/fragment_tv_show"/>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.movieviews.presentation.ui.fragment.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite"/>

</navigation>