<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.example.movieviews.presentation.ui.fragment.movie.viewmodel.MovieFragmentViewModelImpl" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.fragment.movie.MovieFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/section_filter_and_sort">

            <LinearLayout
                android:id="@+id/section_filter_and_sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/space_medium_large"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <RelativeLayout
                    android:id="@+id/btn_filter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_medium_small"
                    android:layout_marginEnd="@dimen/space_medium_small"
                    android:layout_marginBottom="@dimen/space_small"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_outline_sand_small">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextViewBold_Dark"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@id/tv_filter_text"
                        android:background="@drawable/rounded_info"
                        android:gravity="center"
                        android:paddingStart="@dimen/space_medium_small"
                        android:paddingEnd="@dimen/space_medium_small"
                        android:text="@{``+ data.filterCount}"
                        android:textColor="@color/white"
                        android:textSize="@dimen/space_text_large"
                        android:visibility="@{data.filterCount == 0 ? View.GONE : View.VISIBLE}"
                        tools:text="1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_filter_text"
                        style="@style/TextViewFilterAndSort"
                        android:layout_centerHorizontal="true"
                        android:drawableStart="@drawable/ic_filter_list"
                        android:drawablePadding="@dimen/space_medium_large"
                        android:paddingStart="@dimen/space_large"
                        android:paddingTop="@dimen/space_medium"
                        android:paddingEnd="@dimen/space_large"
                        android:paddingBottom="@dimen/space_medium"
                        android:text="@string/btn_filter"
                        android:textSize="@dimen/space_text_large" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btn_sorting"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_small"
                    android:layout_marginStart="@dimen/space_medium_small"
                    android:layout_marginEnd="@dimen/space_medium_small"
                    android:layout_marginBottom="@dimen/space_small"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_outline_sand_small">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextViewFilterAndSort"
                        android:layout_centerHorizontal="true"
                        android:drawableStart="@drawable/ic_sort"
                        android:drawablePadding="@dimen/space_medium_large"
                        android:paddingStart="@dimen/space_large"
                        android:paddingTop="@dimen/space_medium"
                        android:paddingEnd="@dimen/space_large"
                        android:paddingBottom="@dimen/space_medium"
                        android:text="@string/btn_sort"
                        android:textSize="@dimen/space_text_large"/>

                </RelativeLayout>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:padding="@dimen/space_medium_large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/section_filter_and_sort"
                tools:itemCount="2"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/item_view_movie_adapter"
                tools:spanCount="2" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_retry"
                android:layout_width="@dimen/space_heavy_medium"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_medium"
                android:background="@drawable/rounded_dark_blue"
                android:text="@string/retry"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progress_bar"
                tools:visibility="visible" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>